--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
                 <br>
 
-              <li><a href="#">Term of Service</a></li>
+              <li><a href="#">Term of Services</a></li>
               <li><a href="#">Privacy Policy</a></li>
               <li><a href="#">FAQ</a></li>
             </ul>
