--- a/public/about-us.html
+++ b/public/about-us.html
@@ -148,16 +148,31 @@ At Approved Jets, we take great pride and joy in offering an unforgettable luxur
 </div>
 
 <div class="row">
+  <div class="col-lg-3 col-md-4">
+    <div class="member" data-aos="zoom-in" data-aos-delay="100">
+      <a href="https://travelnoire.com/meet-the-founders-of-approved-jets-a-black-owned-private-jet-company.html" target="”_blank”"><img alt="" class="img-fluid" src="images/pj-0.jpg" /> </a>
+  
+    <div class="member-info">
+    <div class="member-info-content"><a href="https://travelnoire.com/meet-the-founders-of-approved-jets-a-black-owned-private-jet-company.html" target="”_blank”">
+      <span>Meet the Founders of Approved Jets, a Black-owned Private Jet Company</span> </a>
+      <br>
+  
+    <h5><a href="https://travelnoire.com/meet-the-founders-of-approved-jets-a-black-owned-private-jet-company.html" target="”_blank”">Travel Noir</a></h5>
+    <a href="https://travelnoire.com/meet-the-founders-of-approved-jets-a-black-owned-private-jet-company.html" target="”_blank”"> </a></div>
+    </div>
+    <a href="https://travelnoire.com/meet-the-founders-of-approved-jets-a-black-owned-private-jet-company.html" target="”_blank”"> </a></div>
+  </div>
+
 <div class="col-lg-3 col-md-4">
-<div class="member" data-aos="zoom-in" data-aos-delay="100"><a href="https://yen.com.gh/146181-kelvin-mensah-meet-ghanaian-private-jet-broker-entrepreneur-defining-luxury-travel-services.html" target="”_blank”"><img alt="" class="img-fluid" src="images/pj-1.jpg" /> </a>
+  <div class="member" data-aos="zoom-in" data-aos-delay="100"><a href="https://yen.com.gh/146181-kelvin-mensah-meet-ghanaian-private-jet-broker-entrepreneur-defining-luxury-travel-services.html" target="”_blank”"><img alt="" class="img-fluid" src="images/pj-1.jpg" /> </a>
 
-<div class="member-info">
-<div class="member-info-content"><a href="https://yen.com.gh/146181-kelvin-mensah-meet-ghanaian-private-jet-broker-entrepreneur-defining-luxury-travel-services.html" target="”_blank”"><span>Kelvin Mensah: Meet the Ghanaian private jet broker and entrepreneur defining luxury travel services</span> </a>
+  <div class="member-info">
+  <div class="member-info-content"><a href="https://yen.com.gh/146181-kelvin-mensah-meet-ghanaian-private-jet-broker-entrepreneur-defining-luxury-travel-services.html" target="”_blank”"><span>Kelvin Mensah: Meet the Ghanaian private jet broker and entrepreneur defining luxury travel services</span> </a>
 
-<h5><a href="https://yen.com.gh/146181-kelvin-mensah-meet-ghanaian-private-jet-broker-entrepreneur-defining-luxury-travel-services.html" target="”_blank”">Yen.com.gh</a></h5>
-<a href="https://yen.com.gh/146181-kelvin-mensah-meet-ghanaian-private-jet-broker-entrepreneur-defining-luxury-travel-services.html" target="”_blank”"> </a></div>
-</div>
-<a href="https://yen.com.gh/146181-kelvin-mensah-meet-ghanaian-private-jet-broker-entrepreneur-defining-luxury-travel-services.html" target="”_blank”"> </a></div>
+  <h5><a href="https://yen.com.gh/146181-kelvin-mensah-meet-ghanaian-private-jet-broker-entrepreneur-defining-luxury-travel-services.html" target="”_blank”">Yen.com.gh</a></h5>
+  <a href="https://yen.com.gh/146181-kelvin-mensah-meet-ghanaian-private-jet-broker-entrepreneur-defining-luxury-travel-services.html" target="”_blank”"> </a></div>
+  </div>
+  <a href="https://yen.com.gh/146181-kelvin-mensah-meet-ghanaian-private-jet-broker-entrepreneur-defining-luxury-travel-services.html" target="”_blank”"> </a></div>
 </div>
 
 <div class="col-lg-3 col-md-4">
@@ -174,7 +189,7 @@ At Approved Jets, we take great pride and joy in offering an unforgettable luxur
 
 <div class="col-lg-3 col-md-4">
 <div class="member" data-aos="zoom-in" data-aos-delay="200"><a href="https://www.revolt.tv/2020/4/13/21219364/pf-kev-luxury-travel-interview-video
-              " target="”_blank”"><img alt="" class="img-fluid" src="images/pj-3.jpg" /> </a>
+              " target="”_blank”"><img alt="" class="img-fluid" src="images/pj-5.jpg" /> </a>
 
 <div class="member-info">
 <div class="member-info-content"><a href="https://www.revolt.tv/2020/4/13/21219364/pf-kev-luxury-travel-interview-video
@@ -190,49 +205,40 @@ At Approved Jets, we take great pride and joy in offering an unforgettable luxur
 </div>
 
 <div class="col-lg-3 col-md-4">
-<div class="member" data-aos="zoom-in" data-aos-delay="200"><a href="(https://www.blackenterprise.com/private-jet-broker-kelvin-mensah-is-soaring-to-new-heights-amid-covid-19/) " target="”_blank”"><img alt="" class="img-fluid" src="images/pj-4.jpg" /> </a>
+<div class="member" data-aos="zoom-in" data-aos-delay="200"><a href="https://www.blackenterprise.com/private-jet-broker-kelvin-mensah-is-soaring-to-new-heights-amid-covid-19/ " target="”_blank”"><img alt="" class="img-fluid" src="images/pj-4.jpg" /> </a>
 
 <div class="member-info">
-<div class="member-info-content"><a href="(https://www.blackenterprise.com/private-jet-broker-kelvin-mensah-is-soaring-to-new-heights-amid-covid-19/) " target="”_blank”"><span>Private Jet Broker Kelvin Mensah Is Soaring To New Heights Amid COVID-19 </span> </a>
+<div class="member-info-content"><a href="https://www.blackenterprise.com/private-jet-broker-kelvin-mensah-is-soaring-to-new-heights-amid-covid-19/ " target="”_blank”"><span>Private Jet Broker Kelvin Mensah Is Soaring To New Heights Amid COVID-19 </span> </a>
 
-<h5><a href="(https://www.blackenterprise.com/private-jet-broker-kelvin-mensah-is-soaring-to-new-heights-amid-covid-19/) " target="”_blank”">Black Enterprise </a></h5>
-<a href="(https://www.blackenterprise.com/private-jet-broker-kelvin-mensah-is-soaring-to-new-heights-amid-covid-19/) " target="”_blank”"> </a></div>
+<h5><a href="https://www.blackenterprise.com/private-jet-broker-kelvin-mensah-is-soaring-to-new-heights-amid-covid-19/ " target="”_blank”">Black Enterprise </a></h5>
+<a href="https://www.blackenterprise.com/private-jet-broker-kelvin-mensah-is-soaring-to-new-heights-amid-covid-19/ " target="”_blank”"> </a></div>
 </div>
-<a href="(https://www.blackenterprise.com/private-jet-broker-kelvin-mensah-is-soaring-to-new-heights-amid-covid-19/) " target="”_blank”"> </a></div>
+<a href="https://www.blackenterprise.com/private-jet-broker-kelvin-mensah-is-soaring-to-new-heights-amid-covid-19/ " target="”_blank”"> </a></div>
 </div>
 
 <div class="col-lg-3 col-md-4">
-<div class="member" data-aos="zoom-in" data-aos-delay="200"><a href=" (https://travelnoire.com/pj-kev-making-waves-travel-industry)
-                  " target="”_blank”"><img alt="" class="img-fluid" src="images/pj-3.jpg" /> </a>
+<div class="member" data-aos="zoom-in" data-aos-delay="200"><a href="https://travelnoire.com/pj-kev-making-waves-travel-industry" target="”_blank”"><img alt="" class="img-fluid" src="images/pj-3.jpg" /> </a>
 
 <div class="member-info">
-<div class="member-info-content"><a href=" (https://travelnoire.com/pj-kev-making-waves-travel-industry)
-                  " target="”_blank”"><span>Been Around The World: Here&#39;s How Luxury Lifestyle Specialist &quot;PJ Kev&quot; Is Making Waves In The Travel Industry</span> </a>
+<div class="member-info-content"><a href="https://travelnoire.com/pj-kev-making-waves-travel-industry" target="”_blank”"><span>Been Around The World: Here&#39;s How Luxury Lifestyle Specialist &quot;PJ Kev&quot; Is Making Waves In The Travel Industry</span> </a>
 
-<h5><a href=" (https://travelnoire.com/pj-kev-making-waves-travel-industry)
-                  " target="”_blank”">Travel Noire</a></h5>
-<a href=" (https://travelnoire.com/pj-kev-making-waves-travel-industry)
-                  " target="”_blank”"> </a></div>
+<h5><a href="https://travelnoire.com/pj-kev-making-waves-travel-industry" target="”_blank”">Travel Noire</a></h5>
+<a href="https://travelnoire.com/pj-kev-making-waves-travel-industry" target="”_blank”"> </a></div>
 </div>
-<a href=" (https://travelnoire.com/pj-kev-making-waves-travel-industry)
-                  " target="”_blank”"> </a></div>
+<a href="https://travelnoire.com/pj-kev-making-waves-travel-industry" target="”_blank”"> </a></div>
 </div>
 
 <div class="col-lg-3 col-md-4">
-<div class="member" data-aos="zoom-in" data-aos-delay="200"><a href=" (https://www.businessinsider.com/presenting-how-private-jet-broker-built-career-celebrity-clients-2021-1)
+<div class="member" data-aos="zoom-in" data-aos-delay="200"><a href=" https://africa.businessinsider.com/local/careers/presenting-inside-the-career-rise-of-a-29-year-old-private-jet-broker-who-manages/0325rq7
                     " target="”_blank”"><img alt="" class="img-fluid" src="images/pj-3.jpg" /> </a>
 
 <div class="member-info">
-<div class="member-info-content"><a href=" (https://www.businessinsider.com/presenting-how-private-jet-broker-built-career-celebrity-clients-2021-1)
-                    " target="”_blank”"><span>Inside the career rise of a 29-year-old private jet broker who manages celebrity clients like Kardashians </span> </a>
+<div class="member-info-content"><a href=" https://africa.businessinsider.com/local/careers/presenting-inside-the-career-rise-of-a-29-year-old-private-jet-broker-who-manages/0325rq7" target="”_blank”"><span>Inside the career rise of a 29-year-old private jet broker who manages celebrity clients like Kardashians </span> </a>
 
-<h5><a href=" (https://www.businessinsider.com/presenting-how-private-jet-broker-built-career-celebrity-clients-2021-1)
-                    " target="”_blank”">Business Insider </a></h5>
-<a href=" (https://www.businessinsider.com/presenting-how-private-jet-broker-built-career-celebrity-clients-2021-1)
-                    " target="”_blank”"> </a></div>
+<h5><a href=" https://africa.businessinsider.com/local/careers/presenting-inside-the-career-rise-of-a-29-year-old-private-jet-broker-who-manages/0325rq7" target="”_blank”">Business Insider </a></h5>
+<a href=" https://africa.businessinsider.com/local/careers/presenting-inside-the-career-rise-of-a-29-year-old-private-jet-broker-who-manages/0325rq7" target="”_blank”"> </a></div>
 </div>
-<a href=" (https://www.businessinsider.com/presenting-how-private-jet-broker-built-career-celebrity-clients-2021-1)
-                    " target="”_blank”"> </a></div>
+<a href=" https://africa.businessinsider.com/local/careers/presenting-inside-the-career-rise-of-a-29-year-old-private-jet-broker-who-manages/0325rq7" target="”_blank”"> </a></div>
 </div>
 </div>
 </div>
