--- a/public/experiences.html
+++ b/public/experiences.html
@@ -119,7 +119,7 @@
 <h3 class="cinzel text-center">Ghana</h3>
 
 <p class="lead">A world of convenience and luxury.<br />
-At Approved Jets, we take great pride and joy in offering an forgettable luxurious experience while traveling across our global network. Our expertise in luxury aviation comes from over twenty years of experience in providing privates flights throughout the United States, Europe, Asia, South America and the United Arab of Emirates.</p>
+At Approved Jets, we take great pride and joy in offering an unforgettable luxurious experience while traveling across our global network. Our expertise in luxury aviation comes from over twenty years of experience in providing privates flights throughout the United States, Europe, Asia, South America and the United Arab of Emirates.</p>
 <a class="btn-ex p-2 btn-block text-center" href="bookus.html">Book Now</a></div>
 
 <div class="col-md-7 " id="ex-image"><img alt="Bridge View Resort" class="img-fluid " src="images/destinations/ghana-4.jpg" /></div>
@@ -143,7 +143,7 @@ At Approved Jets, we take great pride and joy in offering an forgettable luxurio
 <h3 class="cinzel text-center">Turks &amp; Caicos</h3>
 
 <p class="lead">A world of convenience and luxury.<br />
-At Approved Jets, we take great pride and joy in offering an forgettable luxurious experience while traveling across our global network. Our expertise in luxury aviation comes from over twenty years of experience in providing privates flights throughout the United States, Europe, Asia, South America and the United Arab of Emirates.</p>
+At Approved Jets, we take great pride and joy in offering an unforgettable luxurious experience while traveling across our global network. Our expertise in luxury aviation comes from over twenty years of experience in providing privates flights throughout the United States, Europe, Asia, South America and the United Arab of Emirates.</p>
 <a class="btn-ex p-2 btn-block text-center" href="bookus.html">Book Now</a></div>
 </div>
 <!-- ------------------------------------------------------------------------------- -->
@@ -163,7 +163,7 @@ At Approved Jets, we take great pride and joy in offering an forgettable luxurio
 <h3 class="cinzel text-center">Tulum</h3>
 
 <p class="lead">A world of convenience and luxury.<br />
-At Approved Jets, we take great pride and joy in offering an forgettable luxurious experience while traveling across our global network. Our expertise in luxury aviation comes from over twenty years of experience in providing privates flights throughout the United States, Europe, Asia, South America and the United Arab of Emirates.</p>
+At Approved Jets, we take great pride and joy in offering an unforgettable luxurious experience while traveling across our global network. Our expertise in luxury aviation comes from over twenty years of experience in providing privates flights throughout the United States, Europe, Asia, South America and the United Arab of Emirates.</p>
 <a class="btn-ex p-2 btn-block text-center" href="bookus.html">Book Now</a></div>
 
 <div class="col-md-7 " id="ex-image"><img alt="..." class="img-fluid " src="images/destinations/tulum-1.jpg" /></div>
@@ -187,7 +187,7 @@ At Approved Jets, we take great pride and joy in offering an forgettable luxurio
 <h3 class="cinzel text-center">Dubai</h3>
 
 <p class="lead">A world of convenience and luxury.<br />
-At Approved Jets, we take great pride and joy in offering an forgettable luxurious experience while traveling across our global network. Our expertise in luxury aviation comes from over twenty years of experience in providing privates flights throughout the United States, Europe, Asia, South America and the United Arab of Emirates.</p>
+At Approved Jets, we take great pride and joy in offering an unforgettable luxurious experience while traveling across our global network. Our expertise in luxury aviation comes from over twenty years of experience in providing privates flights throughout the United States, Europe, Asia, South America and the United Arab of Emirates.</p>
 <a class="btn-ex p-2 btn-block text-center" href="bookus.html">Book Now</a></div>
 </div>
 <!-- ------------------------------------------------------------------------------- -->
@@ -207,7 +207,7 @@ At Approved Jets, we take great pride and joy in offering an forgettable luxurio
 <h3 class="cinzel text-center">Punta Cana</h3>
 
 <p class="lead">A world of convenience and luxury.<br />
-At Approved Jets, we take great pride and joy in offering an forgettable luxurious experience while traveling across our global network. Our expertise in luxury aviation comes from over twenty years of experience in providing privates flights throughout the United States, Europe, Asia, South America and the United Arab of Emirates.</p>
+At Approved Jets, we take great pride and joy in offering an unforgettable luxurious experience while traveling across our global network. Our expertise in luxury aviation comes from over twenty years of experience in providing privates flights throughout the United States, Europe, Asia, South America and the United Arab of Emirates.</p>
 <a class="btn-ex p-2 btn-block text-center" href="bookus.html">Book Now</a></div>
 
 <div class="col-md-7 " id="ex-image"><img alt="..." class="img-fluid " src="images/destinations/punta-1.jpg" /></div>
@@ -231,7 +231,7 @@ At Approved Jets, we take great pride and joy in offering an forgettable luxurio
 <h3 class="cinzel text-center ">Jamaica</h3>
 
 <p class="lead">A world of convenience and luxury.<br />
-At Approved Jets, we take great pride and joy in offering an forgettable luxurious experience while traveling across our global network. Our expertise in luxury aviation comes from over twenty years of experience in providing privates flights throughout the United States, Europe, Asia, South America and the United Arab of Emirates.</p>
+At Approved Jets, we take great pride and joy in offering an unforgettable luxurious experience while traveling across our global network. Our expertise in luxury aviation comes from over twenty years of experience in providing privates flights throughout the United States, Europe, Asia, South America and the United Arab of Emirates.</p>
 <a class="btn-ex p-2 btn-block text-center" href="bookus.html">Book Now</a></div>
 </div>
 <!-- ------------------------------------------------------------------------------- -->
