--- a/public/about-us.html
+++ b/public/about-us.html
@@ -142,7 +142,7 @@ At Approved Jets, we take great pride and joy in offering an unforgettable luxur
 <section class="portfolio" id="portfolio">
 <div class="container" data-aos="fade-up">
 <div class="section-title">
-<h2 class="cinzel">More about PJ Kev</h2>
+<h2 class="cinzel">More about Kelvin Mensah</h2>
 
 <p>Approved Jets</p>
 </div>
