--- a/public/about-us.html
+++ b/public/about-us.html
@@ -133,17 +133,10 @@ global network. Our expertise in luxury aviation comes from over
 twenty years of experience in providing privates flights throughout
  the United States, Europe, Asia, South America and the United Arab of Emirates.</p>
 
- <div class="social-links my-3">
-  <a target=”_blank” href="https://twitter.com/PJkevApproved?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="twitter"><i class="bi bi-twitter"></i></a>
-  <a target=”_blank” href="https://www.facebook.com/pjkevapproved/" class="facebook"><i class="bi bi-facebook"></i></a>
-  <a target=”_blank” href="https://www.instagram.com/pjkev/?hl=en" class="instagram"><i class="bi bi-instagram"></i></a>
-  <a target=”_blank” href="https://www.linkedin.com/in/kelvinmensah" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-</div>
+<div class="social-links my-2"></div>
+<a class="btn btn-danger btn-lg order-2 order-lg-1" id="extra-kev">Read more below </a></div>
 
-<a class="btn btn-danger btn-lg order-2 order-lg-1" id="extra-kev">Read more below <i class="bi bi-chevron-double-down"></i> </a>
-</div>
-
-<div class="col-md-6  pj_kev order-1 "><img alt="..." class="w-100" src="images/pj_kev.png" style="border-radius: 80px;" /></div>
+<div class="col-md-6  pj_kev order-1 order-lg-2"><img alt="..." class="w-100" src="images/pj_kev.png" style="border-radius: 80px;" /></div>
 </div>
 <!-- Row End --></div>
 <!-- Container End --><!-- <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<  MORE ABOUT PJ KEV >>>>>>>>>>>>>>>>>>>>>>>>  -->
