--- a/public/about-us.html
+++ b/public/about-us.html
@@ -129,7 +129,7 @@
 
 
 <!-- <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< Our Team Section >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> -->
-
+<!-- 
 <div class="team pb-3" id="team">
 
   <div class="team-section container pb-4">
@@ -188,7 +188,7 @@
   </div>
   </div>
   </div>
-  </div>
+  </div> -->
   
   
   <!-- <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< END OF TEAM SECTION >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> -->
